tests/rosetta/out/Zig/100-doors.error
zig build: exit status 1
/tmp/100-doors.zig:12:19: error: type '[]i32' does not support array initialization syntax
/tmp/100-doors.zig:12:19: note: inferred array length is specified with an underscore: '[_]i32'
